alternate_styles.css
h1, p, ul {
  color: #F1FAEE;
}

body {
  background-color: #F1FAEE;
}

.navbar {
  background-color: #1D3557;

}

.comp-logo-text {
font-family: "Roboto Condensed";
font-size: 1.25rem;;
border-bottom: .1rem solid #E63946;
}

.main-head {
    position: relative;
    background-color: #343a40;
    background: linear-gradient(rgba(168, 218, 220, .75), transparent 90%),
                linear-gradient(0deg, #F1FAEE, transparent),
                rgba(63, 136, 197, 1) url("img/abstract-antique-backdrop-background-164005.jpg") no-repeat center center;
    background-size: cover;
    padding-top: 8rem;
    padding-bottom: 8rem;
  }

  .head-content {
      background-color: rgba(29, 53, 87, 0.8);
      
  }

  .new-section {
    border: .1rem solid #9db4c0;
  padding: 5px;
  border-radius: 4px;
  }

  .comp-logo {
    border: 1px solid #F1FAEE;
  border-radius: 4px;
  padding: 5px;
  }

  .about-us-header {
    background: #9db4c0;  /* fallback for old browsers */
  }


  .bt-card {
    background-color: #457B9D;
  }

  .bt-img {
    border: 1px solid #F1FAEE;
  border-radius: 4px;
  padding: 5px;
  }


  .testimonial-img {
    height: 180px;
  }

  .testi {
    background-color: #457B9D;
    padding-top: 20px;;
  }

  blockquote:before {
    content: '\201C';
    position: absolute;
    top: 0em;
    left: 50%;
    transform: translate(-50%, -50%);
    background: transparent;
    width: 3rem;
    height: 2rem;
    font: 6em/1.08em 'PT Sans', sans-serif;
    color: #BE2F3A;
    text-align: center;
  }
  .blockquote-footer {
    color: black;
  }

  .port-img {
    max-width: 100%;
    height: auto;
    min-width: 200px;
  }

  .qual-img {
    height: 65px;
    width: auto;
    margin-right: 1rem;
  }

  .card {
    height: 100%;
  }

  .btn-link {
    color: #F1FAEE;
    align-content: center;
  }

  .btn-link:hover {
    text-decoration: none;
    color: #1D3557;
  }

  #accordion .card-header {
    background-color: #457B9D;
  }

  .accordion-content {
    background-color: #455874;
  }

  @media only screen and (max-width: 500px) {
    .comp-logo {
      width: 75%;
      height: auto;
      margin-left: auto;
    }

    .nav-pad {
        height: 60px;
    }
}

